--- a/config.clj.example
+++ b/config.clj.example
@@ -1,12 +1,14 @@
 {:output-dir "/var/tmp"
 
+ :controlfield-pattern #"00[0-9]"
+
  :listen-port 9095
 
  ;; Note: the total number of active threads will be (roughly) these two values multiplied.
  :worker-threads 2
  :max-concurrent-jobs 1
 
- :marc-destination marcgrep.destinations.marcfile
+ :marc-destination-list [marcgrep.destinations.marcfile]
 
  :marc-backend marcgrep.backends.nla
  :solr-index "/var/local/solr/data/index"
