--- a/config.clj.example
+++ b/config.clj.example
@@ -8,7 +8,7 @@
  :worker-threads 2
  :max-concurrent-jobs 1
 
- :marc-destination-list [marcgrep.destinations.marcfile]
+ :marc-destination-list [marcgrep.destinations.marcfile marcgrep.destinations.plaintext]
 
  :marc-backend marcgrep.backends.nla
  :solr-index "/var/local/solr/data/index"
