Data source changes:
  * Added a "concat" data source that just yields the records of one or more
    data sources in sequence.

  * Added a MARC file data source that reads records in MARC21 format.

  * Modify the MARC and MARCXML file sources to let you specify multiple files to read from.

--- a/config.clj.example
+++ b/config.clj.example
@@ -12,9 +12,9 @@
 
  :marc-source-list [{:description "my test bibliographic data"
                      :driver marcgrep.sources.marcxml-file
-                     :marc-file "/home/mst/test-records.xml"}
+                     :marc-files ["/home/mst/test-records.xml"]}
 
                     {:description "some other file I found"
                      :driver marcgrep.sources.marcxml-file
-                     :marc-file "/home/mst/tinyupdates.xml"}]
+                     :marc-files ["/home/mst/tinyupdates.xml"]}]
  }
