--- a/config.clj.example
+++ b/config.clj.example
@@ -1,5 +1,7 @@
 {:output-dir "/var/tmp"
 
+ :state-file "marcgrep.dat"
+
  :listen-port 9095
 
  ;; Note: the total number of active threads will be (roughly) these two values multiplied.
