--- a/resources/config.clj.example
+++ b/resources/config.clj.example
@@ -10,15 +10,36 @@
 
  :marc-destination-list [marcgrep.destinations.marcfile marcgrep.destinations.plaintext]
 
- :marc-source-list [{:description "my test bibliographic data"
+ :marc-source-list [{:description "Some MARCXML record files"
                      :driver marcgrep.sources.marcxml-file
-                     :marc-files ["/home/mst/test-records.xml"
-                                  {:dir "/path/to/somewhere"
-                                   :pattern #"my\.file\.[0-9]+$"}]}
+                     :marc-files [
+                                  ;; Read a single MARCXML file
+                                  "/var/tmp/test-records.xml"
 
-                    {:description "some other file I found"
-                     :driver marcgrep.sources.marcxml-file
-                     :marc-files ["/home/mst/tinyupdates.xml"]}]
+                                  ;; And all the files in a directory matching a regular expression
+                                  ;; (e.g. /var/tmp/my.file.123.xml, /var/tmp/my.file.234.xml)
+                                  {:dir "/var/tmp"
+                                   :pattern #"my\.file\.[0-9]+\.xml$"}
+                                 ]}
+
+                    {:description "Some MARC record files"
+                     :driver marcgrep.sources.marc-file
+                     :marc-files [
+                                  ;; Read a single MARC file
+                                  "/var/tmp/records.mrc"
+
+                                  ;; And all the files in a directory matching a regular expression
+                                  ;; (e.g. /var/tmp/my.file.123.mrc, /var/tmp/my.file.234.mrc)
+                                  {:dir "/var/tmp"
+                                   :pattern #"my\.file\.[0-9]+\.mrc$"}
+                                 ]}
+
+                    {:description "Records stored in a VuFind index"
+                     :driver marcgrep.sources.vufind
+                     :index-path "/usr/local/vufind/solr/biblio/index"
+                     :stored-field "fullrecord"
+                    }
+                   ]
 
  :configure-jetty (fn [server]
                     (let [[connector] (.getConnectors server)]
